# simurosot-2021

./: README.md
aruku/: CMakeLists.txt  package.xml
aruku/data/: aruku.json  aruku_v1_forward.json  aruku_v2_forward.json  aruku_v3_forward.json  aruku_v4_forward.json  main.json
aruku/include/aruku/: walking.hpp
aruku/src/: walking_main.cpp
aruku/src/aruku/: walking.cpp
bioloid_gp_master/src/: movement copy.py  movement.py
keisan/: CMakeLists.txt  package.xml
keisan/include/keisan/: algebra.h  matrix.h  point.h  vector.h  vector2.h
keisan/src/keisan/: algebra.cpp  matrix.cpp  point.cpp  vector.cpp  vector2.cpp
sprint/: CMakeLists.txt  package.xml
sprint/data/: main.json
sprint/src/: sprint_main.cpp
