<?xml version="1.0"?>
<package format="2">
  <name>aruku</name>
  <version>0.0.0</version>
  <description>Aruku Package for Simurosot Competition 2021</description>
  <maintainer email="jalilpro31@gmail.com">Maroqi Jalil</maintainer>
  <license>MIT License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>keisan</depend>
  <depend>nlohmann-json-dev</depend>
</package>
