<?xml version="1.0"?>
<package format="2">
  <name>keisan</name>
  <version>0.0.0</version>
  <description>Keisan Package for Simurosot Competition 2021</description>
  <maintainer email="jalilpro31@gmail.com">Maroqi Jalil</maintainer>
  <license>MIT License</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
